config/local-testing/cupboard_web.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app.kubernetes.io/name: cupboard
    app.kubernetes.io/managed-by: kustomize
  name: cupboard-web
spec:
  ports:
  - name: web
    port: 8082
    protocol: TCP
    targetPort: 8082
  selector:
    app.kubernetes.io/name: cupboard
    control-plane: controller-manager
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  labels:
    app.kubernetes.io/name: cupboard
    app.kubernetes.io/managed-by: kustomize
  name: cupboard-web
spec:
  entryPoints:
  - web
  routes:
  - kind: Rule
    match: Host(`cupboard.localhost`)
    services:
    - name: cupboard-web
      port: 8082
